WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214705
Tapping QuickType suggestions for a misspelled word does nothing in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=214705
Summary
Tapping QuickType suggestions for a misspelled word does nothing in Mail compose
Wenson Hsieh
Reported
2020-07-23 15:13:56 PDT
<
rdar://problem/58320785
>
Attachments
Patch
(15.14 KB, patch)
2020-07-23 15:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix non-internal iOS build
(16.67 KB, patch)
2020-07-23 15:45 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Minor tweaks
(19.33 KB, patch)
2020-07-23 16:33 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix API test
(19.64 KB, patch)
2020-07-23 18:01 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix API test
(19.91 KB, patch)
2020-07-23 20:20 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-07-23 15:37:58 PDT
Comment hidden (obsolete)
Created
attachment 405085
[details]
Patch
Wenson Hsieh
Comment 2
2020-07-23 15:45:26 PDT
Created
attachment 405086
[details]
Fix non-internal iOS build
Tim Horton
Comment 3
2020-07-23 15:52:57 PDT
Comment on
attachment 405086
[details]
Fix non-internal iOS build View in context:
https://bugs.webkit.org/attachment.cgi?id=405086&action=review
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:1770 > + completionHandler();
Does this want some kind of call-at-exit thing? (I feel like we have one, but not sure what it's called)
Darin Adler
Comment 4
2020-07-23 16:00:04 PDT
Comment on
attachment 405086
[details]
Fix non-internal iOS build View in context:
https://bugs.webkit.org/attachment.cgi?id=405086&action=review
>> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:1770 >> + completionHandler(); > > Does this want some kind of call-at-exit thing? (I feel like we have one, but not sure what it's called)
makeScopeExit
Wenson Hsieh
Comment 5
2020-07-23 16:00:53 PDT
(In reply to Darin Adler from
comment #4
)
> Comment on
attachment 405086
[details]
> Fix non-internal iOS build > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=405086&action=review
> > >> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:1770 > >> + completionHandler(); > > > > Does this want some kind of call-at-exit thing? (I feel like we have one, but not sure what it's called) > > makeScopeExit
👍🏻
Wenson Hsieh
Comment 6
2020-07-23 16:33:54 PDT
Created
attachment 405095
[details]
Minor tweaks
Wenson Hsieh
Comment 7
2020-07-23 18:01:47 PDT
Created
attachment 405107
[details]
Fix API test
Wenson Hsieh
Comment 8
2020-07-23 20:20:58 PDT
Created
attachment 405122
[details]
Fix API test
EWS
Comment 9
2020-07-23 22:32:00 PDT
Committed
r264812
: <
https://trac.webkit.org/changeset/264812
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405122
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug